# phd-paper2-configuration-framework-for-llm-based-grading

./: .gitignore  CLAUDE.md  Makefile  PHASES.md  README.md  pyproject.toml
article/: main.tex  references.bib
article/figures/: fig1_rq1_twodim.pgf  fig2_cost_vs_agreement.pgf  fig3_per_dataset_config.pgf  fig4_consistency.pgf  fig5_conversation.pgf  fig6_gold_sensitivity.pgf  fig_rq1_panels.pgf  fig_rq2_guidance.pgf  fig_rq3_scope_decomp.pgf  fig_rq4_cost.pgf  fig_rq6_transfer.pgf
article/related/: course_correction_1.7.md  related_work_audit_1.6b.md  related_work_refs.md  slr_foundation.md  sota_draft.tex
article/sections/: conclusion.tex  discussion.tex  framework.tex  introduction.tex  method.tex  results.tex  threats.tex
article/tables/: published_baselines.tex  tab_dimension_contrasts.tex  tab_framework.tex  tab_gold_sensitivity.tex  tab_ptcs_strata.tex  tab_ranking_transfer.tex  tab_rq1_reasoning.tex  tab_semeval_splits.tex  tab_transfer_verified.tex
experiments/: __init__.py  model_roster.md
experiments/analysis/: __init__.py  __main__.py  audit_pct_baselines.py  coverage.py  make_baselines_table.py  make_phase5_tables.py  metrics.py  phase5.py  pipeline.py  published_baselines.csv
experiments/configs/: __init__.py  config.py  matrix.yaml  matrix_example.yaml  pricing.yaml  prompts.yaml
experiments/figures/: __init__.py  __main__.py  cost_vs_agreement.py  phase6.py
experiments/harness/: __init__.py  adapter_api.py  adapter_ollama.py  cost_guard.py  env.py  grading.py  ollama_check.py  paid_smoke.py  parser.py  prompts.py  store.py  test_parser.py
(+24 files in other folders)
